--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   <script src="Javascript/p5.js"></script>
   <script src="Javascript/p5.sound.min.js"></script>
-  <script src="Javascript/sketch.js"></script>
+  <script src="Javascript/arrayForLoop.js"></script>
 </head>
 
 <body>
