--- a/index.html
+++ b/index.html
@@ -7,13 +7,31 @@
   <title>p5.js example</title>
   <style>
     body {
-      padding: 0;
+      padding: 10px;
       margin: 0;
+    }
+    h2{
+      text-align: center;
+    }
+
+    button{
+      width: 100px;
+      height: 50px;
+      color: white;
+      background-color:rgb(200,10,100);
+      border:none;
+    }
+    .glitchVid{
+      width: 100px;
+      height: 50px;
+      color: black;
+      background-color:rgb(100,100,100);
+
     }
   </style>
   <script src="Javascript/p5.js"></script>
   <script src="Javascript/p5.sound.min.js"></script>
-  <script src="Javascript/brushes.js"></script>
+  <script src="Javascript/domVideoSound.js"></script>
 </head>
 
 <body>
