--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
   <script src="Javascript/p5.js"></script>
   <script src="Javascript/p5.sound.min.js"></script>
-  <script src="Javascript/domVideoSound.js"></script>
+  <script src="Javascript/PT2.js"></script>
 </head>
 
 <body>
