--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <title>ripple's_timeline</title>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
   <style>
     body {
-      padding: 10px;
+      padding: 0px;
       margin: 0;
     }
-    h2{
+    /* h2{
       text-align: center;
     }
 
@@ -27,14 +29,16 @@
       color: black;
       background-color:rgb(100,100,100);
 
-    }
+    } */
   </style>
   <script src="Javascript/p5.js"></script>
-  <script src="Javascript/p5.sound.min.js"></script>
+  <script src="Javascript/p5.dom.min.js"></script>
   <script src="Javascript/PT2.js"></script>
 </head>
 
 <body>
+  <h1 class= "imageRedDropShadow" class="centeredText">
+  Find the LINE OF BALANCE 
   <main>
   </main>
 </body>
