Song + Line of Balance Update

--- a/index.html
+++ b/index.html
@@ -38,9 +38,24 @@
 
 <body>
   <h1 class= "imageRedDropShadow" class="centeredText">
-  Find the LINE OF BALANCE 
+  Find the LINE OF BALANCE
+  <audio id="myAudio" controls loop>
+    <source src="Tokimonsta.ogg" type="audio/ogg">
+    <source src="Tokimonsta.mp3" type="audio/mpeg">
+  </audio>
+
+  <p id="demo"></p>
+
+  <script>
+  function myFunction() {
+    var x = document.getElementById("myAudio").loop;
+    document.getElementById("demo").innerHTML = x;
+  }
+  </script>
   <main>
   </main>
+
+
 </body>
 
 </html>
