Page 2 cubix + Tokimonsta edit still not wokring

--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <title>ripple's_timeline</title>
+  <title>CUBIXUM's Timeline</title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
   <style>
     body {
@@ -33,13 +33,13 @@
   </style>
   <script src="Javascript/p5.js"></script>
   <script src="Javascript/p5.dom.min.js"></script>
-  <script src="Javascript/PT2.js"></script>
+  <script src="Javascript/PT3.js"></script>
   <scrjpt src="domVideoSound.js"></script>
 </head>
 
 <body>
   <h1 class= "imageRedDropShadow" class="centeredText">
-  Find the LINE OF BALANCE
+  AWAKEN THE EDGE...
   <audio id="myAudio" controls loop>
     <source src="Tokimonsta.ogg" type="audio/ogg">
     <source src="Tokimonsta.mp3" type="audio/mpeg">
