--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <body>
   <h1 class= "imageRedDropShadow" class="centeredText">
   Find the LINE OF BALANCE
+<br>
+  <a href="page2.html">WORLD#2</a>
   <audio id="myAudio" controls loop>
     <source src="Tokimonsta.ogg" type="audio/ogg">
     <source src="Tokimonsta.mp3" type="audio/mpeg">
