--- a/page3.html
+++ b/page3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <title>CUBIXUM's Timeline</title>
+  <title>STRETCHLINE's Timeline</title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
   <style>
     body {
@@ -33,15 +33,16 @@
   </style>
   <script src="Javascript/p5.js"></script>
   <script src="Javascript/p5.dom.min.js"></script>
-  <script src="Javascript/PT3.js"></script>
+  <script src="Javascript/PT4.js"></script>
   <scrjpt src="domVideoSound.js"></script>
 </head>
 
 <body>
   <h1 class= "imageRedDropShadow" class="centeredText">
-  AWAKEN THE EDGE... FIND THE ORB
+  SKIES ARE INFINITE... Click to transform
   <br>
-    <a href="page3.html">WORLD#3</a>
+    <a href="index.html">HOMEWORLD</a>
+
   <audio id="myAudio" controls loop>
     <source src="Tokimonsta.ogg" type="audio/ogg">
     <source src="Tokimonsta.mp3" type="audio/mpeg">
