ripple repeat + page 3+4 + music

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
 
 <body>
   <h1 class= "imageRedDropShadow" class="centeredText">
-  Find the LINE OF BALANCE
+  Find the LINE OF BALANCE... begin music in every world...
 <br>
   <a href="page2.html">WORLD#2</a>
+  <audio autoplay controls loop>
+    <source src="audio/Tokimonsta.mp3" type="audio/mpeg">
+    </audio>
   <main>
   </main>
 
