--- a/page2.html
+++ b/page2.html
@@ -40,6 +40,9 @@
 <body>
   <h1 class= "imageRedDropShadow" class="centeredText">
   AWAKEN THE EDGE... FIND THE ORB
+  <audio autoplay controls loop>
+    <source src="audio/Bipolar.mp3" type="audio/mpeg">
+    </audio>
   <br>
     <a href="page3.html">WORLD#3</a>
 
